<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/_16dp"
        android:padding="@dimen/_16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/jadwal_sholat"
                android:textColor="@color/merahcerah"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlSpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitles"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginRight="@dimen/_25dp"
                android:background="@drawable/textlines"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinKota"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlSpin"
                android:layout_margin="@dimen/_10dp"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/dateTimeline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_circle_radius_primary"
                    android:backgroundTint="@color/white"
                    app:dateTextColor="@android:color/white"
                    app:dayTextColor="@android:color/white"
                    app:monthTextColor="@android:color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_fajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_40dp"
                        android:text="@string/subuh" />

                    <TextView
                        android:id="@+id/tv_subuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:text="@string/_05_47_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_dhuhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_40dp"
                        android:text="@string/dzuhur" />

                    <TextView
                        android:id="@+id/tv_dzuhur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:text="@string/_11_50_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_asr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_40dp"
                        android:text="@string/ashar" />

                    <TextView
                        android:id="@+id/tv_ashar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:text="@string/_15_04_pm" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_40dp"
                        android:text="@string/maghrib" />

                    <TextView
                        android:id="@+id/tv_maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:text="@string/_17_52_pm" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_isha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_40dp"
                        android:text="@string/isya" />

                    <TextView
                        android:id="@+id/tv_isya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:text="@string/_19_02_pm" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>